<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ESC101 Tutordroid</string>
    <string name="button1">Write &amp; Run</string>
    <string name="button2">Tutorial</string>
    <string name="button3">Course Details</string>
    <string name="button4">Settings</string>
    <string name="button5">Help</string>
    <string name="button6">save</string>
    <string name="button7">run</string>
    <string name="button8">redo</string>
    <string name="button9">undo</string>
    <string name="button10">clear</string>
    <string name="text2">please read the help page first</string>
    <string name="text1">ESC 101 TutorDroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editor">Editor</string>

</resources>
