<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/text1"
        android:id="@+id/textView"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/><!--couldn't find any option for making it underline so I will use <u></u> and <b></b> in String resource-->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1"
                android:id="@+id/button1"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" /><!--need to find a better way of having a margin on top. currently I am using measure to get a size of text View but later own I will learn how to use the OnGlobalLayoutListener-->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:id="@+id/button2"
                android:layout_below="@+id/button1"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button3"
                android:id="@+id/button3"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button2"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button4"
                android:id="@+id/button4"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button3"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button5"
                android:id="@+id/button5"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button6"
                android:id="@+id/button6"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button5"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:text="@string/text2"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button6"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
