<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.esc101.shikherverma.github.io.esc101.editor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="45sp"
        android:id="@+id/scrollView2"
        android:fillViewport="false">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editText"
            android:gravity="top|start"
            android:background="@android:color/transparent"/><!-- using top|start instead of top|left beacuse android studio recommended so -->
    </ScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:onClick="launchSave"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/scrollView2"
        android:layout_alignEnd="@+id/scrollView2"/>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7"
        android:id="@+id/button7"
        android:onClick="launchRun"
        android:layout_alignBottom="@+id/scrollView2"
        android:layout_toLeftOf="@+id/button6"
        android:layout_toStartOf="@+id/button6" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8"
        android:id="@+id/button8"
        android:onClick="launchRedo"
        android:layout_alignBottom="@+id/scrollView2"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toStartOf="@+id/button7" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9"
        android:id="@+id/button9"
        android:onClick="launchUndo"
        android:layout_alignBottom="@+id/scrollView2"
        android:layout_toLeftOf="@+id/button8"
        android:layout_toStartOf="@+id/button8" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button10"
        android:onClick="launchClear"
        android:id="@+id/button10"
        android:layout_alignBottom="@+id/scrollView2"
        android:layout_toLeftOf="@+id/button9"
        android:layout_toStartOf="@+id/button9" />

</RelativeLayout>